[package]
name = "multidigraph"
version = "0.1.0"
edition = "2021"
description = "A simple library for extraction multi digraph from a Vec of Paths"
redme = "README.md"
homepage = "https://github.com/danielecr/multidigraph"
repository = "https://github.com/danielecr/multidigraph"
license = "GPL-2.0"
license-file = "LICENSE"
keywords = ["digraph"]
categories = ["mathematics"]

[dependencies]
petgraph = "0.7.1"
fixedbitset = "0.5.7"
serde = { version = "1.0.219", features = ["derive"]}
